# gamedeck

./: Cargo.toml
gamedeck/: Cargo.toml
gamedeck/src/config/: database.rs
migration/src/: lib.rs  m20260706_193352_create_users.rs  m20260706_195321_create_games.rs  m20260708_165236_create_genres.rs  m20260708_171133_create_game_plataforms.rs  m20260708_175536_create_review.rs  m20260710_014428_create_game_genres.rs  m20260710_020000_create_library.rs  m20260710_020100_create_refresh_tokens.rs  migrator.rs  schema.rs
src/: app.rs  app_state.rs  lib.rs  main.rs
src/config/: database.rs
src/dto/: mod.rs
src/dto/Game/: create_game_dto.rs  game_response_dto.rs  mod.rs  update_game_dto.rs
src/dto/Genre/: genre_response_dto.rs  mod.rs
src/dto/Platform/: create_platform_dto.rs  mod.rs  platform_response_dto.rs  update_platform_dto.rs
src/dto/Review/: create_review_dto.rs  mod.rs  review_response_dto.rs  update_review_dto.rs
src/dto/User/: create_user_dto.rs  mod.rs  update_user_dto.rs  user_login_dto.rs  user_response_dto.rs
src/entities/: mod.rs
src/errors/: api_erro.rs  error_response.rs  mod.rs
src/handlers/: game_handler.rs  mod.rs  review_handler.rs
src/middleware/: jwt.rs
src/repositories/: mod.rs  review_repository.rs  user_repository.rs
src/routes/: mod.rs
src/services/: auth_service.rs  game.service.rs  user_service.rs
src/utils/: jwt.rs  password.rs  response.rs
