[package]
name = "gamedeck"
version = "0.1.0"
edition = "2024"

[dependencies]
# Web
axum = "0.8"
tokio = { version = "1", features = ["full"] }

# Serialização
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Banco de Dados
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono"
] }

sea-orm-migration = "1.1"

# Configuração
dotenvy = "0.15"

# Logs
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Erros
thiserror = "2"
anyhow = "1"

# Utilidades
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }