[package]
name = "gamedeck"
version = "0.1.0"
edition = "2024"

[dependencies]

axum = "0.8"

tokio = { version = "1", features = ["full"] }

serde = { version = "1", features = ["derive"] }

serde_json = "1"

sqlx = { version = "0.8.0", features = [
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "chrono"
] }

dotenvy = "0.15"

tracing = "0.1"

tracing-subscriber = "0.3"

thiserror = "2"

anyhow = "1"

uuid = { version = "1", features = ["v4", "serde"] }

chrono = { version = "0.4", features = ["serde"] }
